--- a/CodeTheDream/dogs.html
+++ b/CodeTheDream/dogs.html
@@ -23,10 +23,10 @@
     </nav>
     <div class="container">
         <h1>Smile, this dog watches you</h1>
-        <p><button id="newDogButton">More Doggo!</button></p>
+        <p><button id="newDogButton" title="Click to improve your mood">More Doggo!</button></p>
 
         <div id="imageContainer">
-            <img id="dogImage" src="" alt="Random Dog" height="300">
+            <img id="dogImage" src="" alt="Random Dog" height="300" class="petImage">
         </div>
     </div>
     <footer>
