--- a/CodeTheDream/index.html
+++ b/CodeTheDream/index.html
@@ -23,10 +23,10 @@
     </nav>
     <div class="container">
         <h1>Smile, this cat watches you</h1>
-        <p><button id="newCatButton">More Kittie!</button></p>
+        <p><button id="newCatButton" title="Click to improve your mood">More Kittie!</button></p>
 
         <div id="imageContainer">
-            <img id="catImage" src="" alt="Random Cat" height="300">
+            <img id="catImage" src="" alt="Random Cat" height="300" class="petImage">
         </div>
     </div>
     <footer>
