--- a/CodeTheDream/pets.html
+++ b/CodeTheDream/pets.html
@@ -23,10 +23,10 @@
     </nav>
     <div class="container">
         <h1>Smile, this pet watches you</h1>
-        <p><button id="newPetButton">More Pets!</button></p>
+        <p><button id="newPetButton" title="Click to improve your mood">More Pets!</button></p>
 
         <div id="imageContainer">
-            <img id="petImage" src="" alt="Random Pet" height="300">
+            <img id="petImage" src="" alt="Random Pet" height="300" class="petImage">
         </div>
     </div>
     <footer>
